# LinuxBoy

./: .gitignore  APP_OVERVIEW.md  Cargo.toml  README.md
capsule-runtime/: AppRun.sh
scripts/: linuxboy-setup.sh
src/: main.rs
src/core/: appimage_builder.rs  backup_restore.rs  capsule.rs  mod.rs  repair.rs  runtime_manager.rs  system_checker.rs  umu_database.rs
src/ui/: capsule_editor.rs  capsule_properties.rs  install_dialog.rs  main_window.rs  mod.rs  style.css  system_setup_dialog.rs
src/utils/: dependencies.rs
